<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <ScrollView android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
		android:layout_weight="1">
    <TableLayout android:layout_width="fill_parent"
    		android:layout_height="wrap_content">
    		<TableRow>
    			<TextView  
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/about"
			    android:gravity="center_horizontal"
			    android:layout_span="2"
			    android:singleLine="false"
			    android:layout_weight="1"
			    />
    		</TableRow>
    		<TableRow>
    			<TextView  
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/license1"
			    android:layout_span="2"
			    android:singleLine="false"
			    android:layout_weight="1"
			    />
    		</TableRow>
    		<TableRow>
    			<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="1. "
			    android:singleLine="false"
			    />
    			<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/license2"
			    android:singleLine="false"
			    android:layout_weight="1"
			    android:gravity="left"
			    />
    		</TableRow>
    		<TableRow>
    			<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="2. "
			    android:singleLine="false"
			    />
    			<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/license3"
			    android:singleLine="false"
			    android:layout_weight="1"
			    android:gravity="left"
			    />
    		</TableRow>
    		<TableRow>
    			<TextView  
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/license4"
			    android:layout_span="2"
			    android:singleLine="false"
			    android:layout_weight="1"
			    />
    		</TableRow>
    		<TableRow>
    			<TextView  
			    android:layout_width="wrap_content" 
			    android:layout_height="wrap_content" 
			    android:text="@string/license5"
			    android:layout_span="2"
			    android:singleLine="false"
			    android:layout_weight="1"
			    />
    		</TableRow>
    	</TableLayout>
    	</ScrollView>
<!-- <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/about"
    android:gravity="center_horizontal"
    />
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/license"
    />-->
</LinearLayout>
